# ml-monitoring-thesis

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-api.txt  requirements.txt
.github/workflows/: ci.yml
app/api/: main.py
app/api/static/: overview.html
app/common/: config.py  logging.py  metrics.py
app/monitoring/: backfill_labels.py  drift_detectors.py  drift_job.py  incidents.py  monitoring_config.py  quality_job.py  reaction_engine.py  scheduler.py  unlabeled_quality.py
app/notifications/: __init__.py  email_relay.py
app/reporting/: __init__.py  build_scenario_summary.py  export_final_artifacts.py
app/simulator/: generate_stream.py
app/train/: train.py
docs/: architecture.md  defense-checklist.md  experiments.md  model-data-card.md  results_example.md  runbook.md
monitoring/: monitoring_config.yaml
monitoring/alertmanager/: alertmanager.yml
monitoring/grafana/dashboards/: ml-monitoring-drift.json  ml-monitoring-overview.json  (+3 more)
monitoring/prometheus/: alerts.yml  prometheus.yml
scripts/: one_command_demo.sh
sql/: init.sql  monitoring_tables.sql  quality_tables.sql
tests/: conftest.py  test_api.py  test_drift_detectors.py  test_drift_job.py  test_email_relay.py  test_grafana_dashboards.py  test_incidents.py  test_integration_api_db.py  test_integration_monitoring_jobs.py  test_metrics.py  test_monitoring_config.py  test_quality_job.py  test_reaction_engine.py  test_scenario_summary.py  test_scheduler.py  test_stream_and_labels.py  test_unlabeled_quality.py
(+2 files in other folders)
